--- a/SimpleBot.csproj
+++ b/SimpleBot.csproj
@@ -134,13 +134,21 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\MessagesController.cs" />
+    <Compile Include="Entity\BaseEntity.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Logic\Message.cs" />
+    <Compile Include="Entity\Message.cs" />
     <Compile Include="Logic\SimpleBotUser.cs" />
-    <Compile Include="Logic\UserProfile.cs" />
+    <Compile Include="Entity\UserProfile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\Base\SqlRepositoryBase.cs" />
+    <Compile Include="Repository\MessageRepository\IMessageRepository.cs" />
+    <Compile Include="Repository\MessageRepository\MessageRepositorySql.cs" />
+    <Compile Include="Repository\MessageRepository\MessageRepositoryMongo.cs" />
+    <Compile Include="Repository\Base\MongoRepositoryBase.cs" />
+    <Compile Include="Repository\Base\IRepositoryBase.cs" />
+    <Compile Include="Repository\UserProfile\UserProfileRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
